# burk_eclipse

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  main.c  new 1  readme.txt  toolchain-mips-rtems4.10.cmake
LibNiisi/: .gitignore
LibNiisi/devices/: gpio.c  mkio.c  spi.c  spw_lib.c  sys_unit.c  timer.c  timer_dec.c  timer_inc.c  uart.c
LibNiisi/include/: chip.h  chip_vm014.h  devdescr.h  devdescr_vm014.h  gpio.h  io.h  mkio.h  spi.h  spw.h  spw_lib.h  sys_unit.h  tests.ld  timer.h  timer_dec.h  timer_inc.h  uart.h
LibVme/include/: bistTest.h  vm014MemoryController.h  vme.ld
LibVme/include/Mcp/: mcpMemoryController.h  mcpSpw.h
LibVme/include/Mpvv/: mpvvMemoryController.h  mpvvSpw.h
LibVme/src/: bistTest.c
LibVme/src/Mcp/: mcpMemoryController.c  mcpSpw.c
LibVme/src/Mpvv/: mpvvMemoryController.c  mpvvSpw.c
src/: burk_function.c  burk_function.h  io.c  main.c  newlib_mips_mod.ld  vmeInit.c  vmeInit.h
startup/: flushcache.S  io.S  startup_auto.S  startup_rom.S  startup_simple.S
startup/include/: chip_asm.h  exc_vectors.h  kernel.h  regdef.h
